# codex-history

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW_TAP_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  SPEC.md
fixtures/: README.md
fixtures/local_history/cross_shard_root/sessions/: 001-thr-cross-shard.jsonl  002-thr-cross-shard.jsonl
fixtures/local_history/response_item_root/sessions/: thr_response_item.jsonl
fixtures/local_history/sample_root/sessions/: thr_command.jsonl  thr_malformed.jsonl  thr_missing_meta.jsonl  thr_simple.jsonl  thr_simple_shard.jsonl
scripts/: generate-checksums.sh  package-release.sh
src/: lib.rs  main.rs  search_scope.rs
src/backend/: local.rs
src/cli/: mod.rs
src/index/: ingest.rs  manifest.rs  mod.rs  query.rs  schema.rs
src/model/: export.rs  item.rs  mod.rs  thread.rs  turn.rs
src/parser/: jsonl.rs
src/redact/: mod.rs
src/util/: paths.rs
tests/: cli_behavior.rs  export_commands.rs  local_backend_commands.rs
