[package]
name = "codex-history"
version = "0.1.0"
edition = "2021"
description = "A read-only CLI for locally accessible Codex session history"
license = "MIT"
repository = "https://github.com/nishantdesai/codex-history"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
